--- a/mi_cartera/templates/purchase.html
+++ b/mi_cartera/templates/purchase.html
@@ -21,11 +21,14 @@
     {{ form.criptomoneda_salida }}
     </div>
     <div>
-    {{ form.cantidad_salida.label }}
-    {{ form.cantidad_salida }}
+    {{ form.obtener_tipo_cambio(class="btn btn-primary") }}
     </div>
     <div>
-    {{ form.ejecutar }}
+    {{ form.cantidad_salida.label }}
+    {{ form.cantidad_salida(value=form.cantidad_salida.dada) }}
+    </div>
+    <div>
+    {{ form.ejecutar(class="btn btn-success") }}
     </div>
 </form>
 {% endblock %}
