--- a/mi_cartera/static/style.css
+++ b/mi_cartera/static/style.css
@@ -1,6 +1,6 @@
 /* Estilos para la navegación en todas las páginas */
 nav {
-    background-color: #4285f4;
+    background-color: #4286f4dc;
     text-align: center;
     padding: 10px 0;
 }
@@ -30,7 +30,7 @@ body {
 h1 {
     text-align: center;
     padding: 20px 0;
-    background-color: #4285f4;
+    background-color: #4286f4dc;
     color: #fff;
     margin: 0;
 }
@@ -74,21 +74,7 @@ input:focus {
     border-color: #1976d2;
 }
 
-/* Estilos para los botones en todas las páginas */
-button {
-    background-color: #4285f4;
-    color: #fff;
-    padding: 12px 24px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
 
-/* Estilos para el hover del botón */
-button:hover {
-    background-color: #1976d2;
-}
 
 /* Estilos específicos para la página "purchase" */
 .purchase-page {
@@ -118,11 +104,6 @@ button:hover {
     margin-right: 5px; /* Espacio entre el label y el select */
 }
 
-.purchase-page button {
-    width: 100%;
-    font-size: 20px;
-    margin-top: 24px;
-}
 
 /* Estilos específicos para la página "status" */
 .status-page {
@@ -162,13 +143,13 @@ tr:hover {
 
 /* Estilos para el encabezado de la tabla */
 th {
-    background-color: #4285f4;
+    background-color: #4286f4dc;
     color: #fff;
 }
 
 /* Estilos para el header en todas las páginas */
 header {
-    background-color: #4285f4;
+    background-color: #4286f4dc;
     text-align: center;
     padding: 10px 0;
     color: #fff;
@@ -181,7 +162,7 @@ header h1 {
 
 /* Estilos para el footer en todas las páginas */
 footer {
-    background-color: #f2f2f2;
+    background-color: #4286f4dc;
     padding: 10px;
     text-align: center;
     color: #333;
@@ -190,13 +171,15 @@ footer {
 /* Estilos para el texto dentro del footer */
 footer p {
     margin: 0;
+    text-align: center;
+    color: #ffffff;
 }
 
 .small-button {
     padding: 5px 10px;
     font-size: 12px;
     border: 1px solid #ccc;
-    background-color: #4285f4;
+    background-color: #4286f4dc;
     cursor: pointer;
     align-items:center;
 }
@@ -205,76 +188,83 @@ footer p {
     background-color: #1976d2;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-}
 
-.modal-contenido {
-    background-color: white;
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-}
 
-/* Estilo para el enlace de cerrar el modal */
-.modal-contenido .modal-cerrar {
-    display: block;
-    text-align: center;
-    margin-top: 10px;
+
+/* Estilos para el formulario de compra */
+.purchase-form {
+    margin-bottom: 20px;
 }
 
 
-/* Estilo para el enlace de cerrar el modal */
-.modal-contenido .modal-cerrar {
-    display: block;
-    text-align: center;
-    margin-top: 10px;
+/* Estilos para el campo "tipo_operacion" */
+.type-operation-field {
+    margin-bottom: 10px; /* Espaciado hacia abajo */
 }
 
-.overlay { 
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    transition: opacity 500ms;
-    visibility: hidden;
-    opacity: 0;
-}
-.overlay:target{
-    visibility: visible;
-    opacity: 1;
+/* Estilos para el contenedor de campos de criptomoneda */
+.crypto-container {
+    display: flex;
+    margin-bottom: 10px;
 }
 
-#popupBody{
-    width: 46%;
-    padding: 2%;
-    border-radius: 15px;
-    box-shadow: 0 0 5px #CCC;
-    background: #FFF;
-    position: relative;
-    margin: 20% auto;
-    transition: all 5s ease-in-out;
+/* Estilos para los campos de criptomoneda */
+.crypto-field {
+    flex: 1;
+    margin-right: 10px;
 }
-#cerrar{
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    font-size: 30px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #F00;
-    transition: all 200ms;
 
+/* Estilos para el contenedor de campos de cantidad y botón "calcular" */
+.amount-calculate-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
 
+/* Estilos para los campos de cantidad */
+.amount-field {
+    flex: 1;
+    margin-right: 10px; /* Espaciado entre los campos de cantidad */
+}
+
+/* Estilos para hacer los campos "cantidad_origen" y "cantidad_salida" más pequeños */
+.small-input {
+    width: 50px; /* Ajusta el ancho según tus necesidades */
+}
+/* Estilos para el botón "calcular" */
+.calculate-button-container {
+    display: flex;
+    justify-content: center; /* Centrar el contenido horizontalmente */
+    margin-top: 10px; /* Espaciado hacia arriba */
+}
+
+.calculate-button {
+    width: 100px; /* Tamaño del botón */
+    height: 40px;
+    background-color: #4286f4dc;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+/* Estilos para el icono dentro del botón "calcular" */
+.calculate-icon {
+    font-size: 20px;
+}
+
+.btn btn-success {
+    background-color: #4286f4dc;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
