--- a/mi_cartera/templates/base.html
+++ b/mi_cartera/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="icon" sizes="16x16 32x32 48x48" type="image/png" href="/static/images/myicon.png" />
     <link rel="stylesheet" href="/static/pico.css">
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>{% block title %}Mi Cartera{% endblock %}</title>
 </head>
 <body class="{% block body_class %}index-page{% endblock %}">
@@ -18,6 +19,16 @@
             <a href="/status" class="nav-button">Estado</a>
         </nav>
     </div>
+
+    {% with msgs = get_flashed_messages() %}
+        {% if msgs %}
+        <div class="container" id="msg-error">
+            {% for msg in msgs%}
+            <p>{{msg}}</p>
+            {% endfor %}
+        </div>
+        {% endif  %}
+    {% endwith %}
 
     {% block page_content %}
     {% endblock %}
