--- a/mi_cartera/templates/purchase.html
+++ b/mi_cartera/templates/purchase.html
@@ -1,47 +1,50 @@
 {% extends 'base.html' %}
 
 {% block title %}Mi Cartera - Comprar/Vender/Intercambiar{% endblock %}
+<body>
+    
 
-{% block page_content %}
-<form action="/purchase" method="post" class="purchase-form">
-    {{ form.csrf_token }}
-    <!-- Contenedor para el campo "tipo_operacion" -->
-    <div class="type-operation-field">
-        {{ form.tipo_operacion.label }}
-        {{ form.tipo_operacion }}
-    </div>
-    
-    <!-- Contenedor para campos de criptomoneda -->
-    <div class="crypto-container">
-        <div class="crypto-field">
-            {{ form.criptomoneda_origen.label }}
-            {{ form.criptomoneda_origen }}
+    {% block page_content %}
+    <form action="/purchase" method="post" class="purchase-form">
+        {{ form.csrf_token }}
+        <!-- Contenedor para el campo "tipo_operacion" -->
+        <div class="type-operation-field">
+            {{ form.tipo_operacion.label }}
+            {{ form.tipo_operacion }}
         </div>
-        <div class="crypto-field">
-            {{ form.criptomoneda_salida.label }}
-            {{ form.criptomoneda_salida }}
+        
+        <!-- Contenedor para campos de criptomoneda -->
+        <div class="crypto-container">
+            <div class="crypto-field">
+                {{ form.criptomoneda_origen.label }}
+                {{ form.criptomoneda_origen }}
+            </div>
+            <div class="crypto-field">
+                {{ form.criptomoneda_salida.label }}
+                {{ form.criptomoneda_salida }}
+            </div>
         </div>
-    </div>
-    
-    <!-- Contenedor para campos de cantidad -->
-    <div class="amount-container">
-        <div class="amount-field">
-            {{ form.cantidad_origen.label }}
-            {{ form.cantidad_origen(class="small-input") }}
+        
+        <!-- Contenedor para campos de cantidad -->
+        <div class="amount-container">
+            <div class="amount-field">
+                {{ form.cantidad_origen.label }}
+                {{ form.cantidad_origen(class="small-input") }}
+            </div>
+            <div class="amount-field">
+                {{ form.cantidad_salida.label }}
+                {{ form.cantidad_salida(value=form.cantidad_salida.dada, readonly="readonly", class="small-input") }}
+            </div>
         </div>
-        <div class="amount-field">
-            {{ form.cantidad_salida.label }}
-            {{ form.cantidad_salida(value=form.cantidad_salida.dada, readonly="readonly", class="small-input") }}
+        
+        <div>
+            {{ form.obtener_tipo_cambio(class="btn btn-primary") }}
         </div>
-    </div>
-    
-    <!-- Contenedor para el botón "calcular" -->
-    <div class="calculate-button-container">
-        {{ form.obtener_tipo_cambio(class="btn btn-primary") }}
-    </div>
-    
-    <div>
-        {{ form.ejecutar(class="btn btn-success") }}
-    </div>
-</form>
+        
+        <div>
+            {{ form.ejecutar(class="btn btn-success") }}
+        </div>
+    </form>
+
+</body>
 {% endblock %}
