He añadido iconos a botones de menu y a las cryptomonedas del apartado status, se revisa codigo y funcionamiento

--- a/mi_cartera/templates/base.html
+++ b/mi_cartera/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="icon" sizes="16x16 32x32 48x48" type="image/png" href="/static/images/myicon.png" />
     <link rel="stylesheet" href="/static/pico.css">
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <title>{% block title %}Mi Cartera{% endblock %}</title>
 </head>
 <body class="{% block body_class %}index-page{% endblock %}">
@@ -14,9 +14,9 @@
 
     <div>
         <nav>
-            <a href="/" class="nav-button">Resumen</a>
-            <a href="/purchase" class="nav-button">Operar</a>
-            <a href="/status" class="nav-button">Estado</a>
+            <a href="/" class="nav-button"><i class="fas fa-home"></i> Resumen</a>
+            <a href="/purchase" class="nav-button"><i class="fas fa-shopping-cart"></i> Operar</a>
+            <a href="/status" class="nav-button"><i class="fas fa-check-circle"></i> Estado</a>
         </nav>
     </div>
 
