Finalizado readme.md y realizados algunos retoques estéticos

--- a/mi_cartera/templates/base.html
+++ b/mi_cartera/templates/base.html
@@ -10,7 +10,9 @@
     <title>{% block title %}Mi Cartera{% endblock %}</title>
 </head>
 <body class="{% block body_class %}index-page{% endblock %}">
-    <h1>{% block page_title %}Mi Cartera{% endblock %}</h1>
+    <h1><i class="fas fa-briefcase"></i> {% block page_title %}Mi Cartera{% endblock %}</h1>
+
+
 
     <div>
         <nav>
